2011-06-09 Borut Razem <borut.razem AT gmail.net>

	* download_regtests_db.php, regtests.php, get_regtest.php, sdcc.ini:
	  use sdcc.ini file for dab connection settings

2011-06-08 Borut Razem <borut.razem AT gmail.net>

	* snap_header.php: removed regression tests downoad
	* left_menu.inc, regtests.php, get_regtest.php:
	  added regression tests page
	* download_regtests_db.php: use $regTestDb instead $db

2011-06-03 Borut Razem <borut.razem AT gmail.net>

	* snap_header.php: get list of platforms from database

2011-05-29 Borut Razem <borut.razem AT gmail.net>

	* download_regtests_db.php: added regtest form
	* styles/*, scripts/*, images/timespan.png: added

22011-05-23 Borut Razem <borut.razem AT gmail.net>

	* download_regtests_db.php: added where parameter

2011-05-22 Borut Razem <borut.razem AT gmail.net>

	* update_regtests_db.php: added
	* download_regtests_db.php, snap.php, snap_header.php:
	  added possibility to download regression test results database
	  in CSV format

2011-05-03 Borut Razem <borut.razem AT gmail.net>

	* index.php: changed Borut's e-mail address
	* left_menu.inc: fixed bug #3296869 - Broken link to wiki

2011-01-19 Borut Razem <borut.razem AT gmail.net>

	* footer.php: changed SourceForge logo

2011-01-16 Borut Razem <borut.razem AT gmail.net>

	* snap.php: search for "invalid instructions"

2010-11-01 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 3.0.0 release

2010-10-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* index.php: fixed typos
	* left_menu.inc: reverted fix for bug 2938514: was just a glitch at SF

2010-10-23 Borut Razem <borut.razem AT siol.net>

	* index.php:
	  added News - sdcc 3.0.0 RC2
	* previous.php: added old news

2010-10-10 Borut Razem <borut.razem AT siol.net>

	* index.php:
	  added News - sdcc 3.0.0 RC1, removed old sdcc 2.9.0 release news
	* previous.php: added old news

2010-09-12 Borut Razem <borut.razem AT siol.net>
