@@ -5,7 +5,7 @@
 
    Copyright (C) 2011, Borut Razem <borut.razem AT gmail.com>
 
-   This library is free software; you can redistribute it and/or modify it
+   This program is free software; you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by the
    Free Software Foundation; either version 2.1, or (at your option) any
    later version.
@@ -19,13 +19,6 @@
    along with this library; see the file COPYING. If not, write to the
    Free Software Foundation, 51 Franklin Street, Fifth Floor, Boston,
    MA 02110-1301, USA.
-
-   As a special exception, if you link this library with other files,
-   some of which are compiled with SDCC, to produce an executable,
-   this library does not by itself cause the resulting executable to
-   be covered by the GNU General Public License. This exception does
-   not however invalidate any other reasons why the executable file
-   might be covered by the GNU General Public License.
 -------------------------------------------------------------------------*/
 
 class RegTestDB extends mysqli {
